--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -109,10 +109,10 @@
                                     <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://zmenu.net">@Model.Value("posretailers")</a>
+                                    <a href="https://www.zmenu.net">@Model.Value("posretailers")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://zmenu.net">@Model.Value("posrestaurant")</a>
+                                    <a href="https://www.zmenu.net">@Model.Value("posrestaurant")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -193,7 +193,7 @@
                             <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://zmenu.net">@Model.Value("posretailers")</a>
+                            <a href="https://www.zmenu.net">@Model.Value("posretailers")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
