--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -92,10 +92,10 @@
                                     <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://zmenu.net">@Model.Value("posretailers")</a>
+                                    <a href="https://www.zmenu.net">@Model.Value("posretailers")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://zmenu.net">@Model.Value("posrestaurant")</a>
+                                    <a href="https://www.zmenu.net">@Model.Value("posrestaurant")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -160,10 +160,10 @@
                             <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://zmenu.net">@Model.Value("posretailers")</a>
+                            <a href="https://www.zmenu.net">@Model.Value("posretailers")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://zmenu.net">@Model.Value("posrestaurant")</a>
+                            <a href="https://www.zmenu.net">@Model.Value("posrestaurant")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
